--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     maven:
         build:
             context: ./docker
-            dockerfile: bf.dockerfile
+            dockerfile: tomcat.dockerfile
         volumes:
    
     tomcat: 
